successfully parsed pdf files

--- a/backend/src/tests/pdf_convert.ipynb
+++ b/backend/src/tests/pdf_convert.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import asyncio\n",
-    "from pdfminer.high_level import extract_text_to_fp"
+    "\n",
+    "from pdfminer.high_level import extract_text"
    ]
   },
   {
@@ -16,12 +16,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "# extract the binary representation of the pdf file\n",
-    "async def pdf_to_text(pdf_buffer: bytes) -> str:\n",
+    "def pdf_to_text(pdf_buffer: bytes) -> str:\n",
     "    text = ''\n",
-    "    with open('temp.pdf', 'wb') as temp_pdf:\n",
+    "    with open('temp.pdf', 'wb') as temp_pdf: # write the pdf buffer to a temporary file\n",
     "        temp_pdf.write(pdf_buffer)\n",
-    "    text = extract_text_to_fp('temp.pdf')\n",
+    "    text = extract_text('temp.pdf')\n",
     "    return text"
    ]
   }
